rolling in updates

--- a/pages/signUp.html
+++ b/pages/signUp.html
@@ -12,9 +12,6 @@
       <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-      <div class="preloader">
-            <div class="preloader__item"></div>
-      </div>
       <div class="container-fluid pl-0 main">
             <div class="row">
                   <div class="col-md-12">
@@ -34,13 +31,13 @@
                 <div class="container">
                       <form action="trending-movie.html" class="form" method="post">
                             <ul class="form__list">
-                                  <li class="form__item active">
-                                        <a href="login.html" class="form__link active">
+                                  <li class="form__item ">
+                                        <a href="login.html" class="form__link inactive">
                                                 Sign in
                                         </a>
                                   </li>
-                                  <li class="form__item">
-                                    <a href="signUp.html" class="form__link inactive">
+                                  <li class="form__item active">
+                                    <a href="signUp.html" class="form__link active">
                                           Sign up
                                     </a>
                               </li>
@@ -62,7 +59,6 @@
             </section>
       </div>
       <script src="../assets/jquery-3.5.1.js"></script>
-      <script src="../assets/bootstrap.min.js"></script>   
-      <script src="../Js/App.js"></script>       
+      <script src="../assets/bootstrap.min.js"></script>          
 </body>
 </html>
