--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                               <p class="paragraph">
                                           43,000 Reviews
                               </p>
-                              <a href="#" class="btn btn--watch">
+                              <a data-fancybox="gallery" href="https://youtu.be/Z3EXVgYLbdU" class="btn btn--watch">
                                     <span class="btn__icon">
                                           <svg width="10" height="11" viewBox="0 0 10 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M0 11L10 5.5L0 0V11Z" fill="white"/>
@@ -114,7 +114,7 @@
                         <div class="item">
                               <div class="gallery">
                                     <div class="gallery__image-box">
-                                          <img src="images/Rectangle 6.png" alt="Dolittle" class="gallery__image">
+                                          <img src="images/dolittle.png" alt="Dolittle" class="gallery__image">
                                     </div>
                                     <div class="gallery__details">
                                           <h3 class="gallery__header">
@@ -129,7 +129,7 @@
                         <div class="item">
                               <div class="gallery">
                                     <div class="gallery__image-box">
-                                          <img src="images/Rectangle 2.png" alt=" Baaghi 3" class="gallery__image">
+                                          <img src="images/Baaghi.png" alt=" Baaghi 3" class="gallery__image">
                                     </div>
                                     <div class="gallery__details">
                                           <h3 class="gallery__header">
@@ -144,7 +144,7 @@
                         <div class="item">
                               <div class="gallery">
                                     <div class="gallery__image-box">
-                                          <img src="images/Rectangle 3.png" alt="Bad Boys for Life" class="gallery__image">
+                                          <img src="images/badBoys.png" alt="Bad Boys for Life" class="gallery__image">
                                     </div>
                                     <div class="gallery__details">
                                           <h3 class="gallery__header">
@@ -159,7 +159,7 @@
                         <div class="item">
                               <div class="gallery">
                                     <div class="gallery__image-box">
-                                          <img src="images/Rectangle 8.png" alt="Mulan" class="gallery__image">
+                                          <img src="images/mulan.png" alt="Mulan" class="gallery__image">
                                     </div>
                                     <div class="gallery__details">
                                           <h3 class="gallery__header">
@@ -174,7 +174,7 @@
                         <div class="item">
                               <div class="gallery">
                                     <div class="gallery__image-box">
-                                          <img src="images/Rectangle 9.png" alt="The Witch" class="gallery__image">
+                                          <img src="images/witch.png" alt="The Witch" class="gallery__image">
                                     </div>
                                     <div class="gallery__details">
                                           <h3 class="gallery__header">
@@ -189,7 +189,7 @@
                         <div class="item">
                               <div class="gallery">
                                     <div class="gallery__image-box">
-                                          <img src="images/Rectangle 10.png" alt="Shikara" class="gallery__image">
+                                          <img src="images/shikara.png" alt="Shikara" class="gallery__image">
                                     </div>
                                     <div class="gallery__details">
                                           <h3 class="gallery__header">
